# smiles-molecule-generator-etl

./: pyproject.toml
TFM/: main.aux  main.fdb_latexmk  main.fls  main.lof  main.lot  main.tex  main.toc  main_capitulo3_actualizado.tex
TFM/resultados_figuras/: tabla_perfiles_puntos_fuertes_debiles.csv  tabla_resumen_descriptores_filtrados.csv  tabla_resumen_shortlist_actividad_admet.csv  tabla_riesgos_candidatas.csv  tabla_scaffolds_shortlist.csv
data/: egfr_activity_IC50 - copia.csv  fda_ema_egfr_reference.csv  model_preprocesed_dataset.csv  model_procesed_dataset.csv
notebooks/: 01_preprocesado.ipynb  02_SMILES_generation.ipynb  02_SMILES_generator_MRL_finetuning_generation.ipynb  03_scoring_ADMETAI_pIC50_similarity_pareto_ESTRUCTURA_OUTPUTS.ipynb  04_conclusiones.ipynb
outputs/mrl/: finetuning_monitoring_history.csv  generated_molecules.csv  generated_molecules_raw.csv
outputs/mrl/run_20260505_183148/: generated_eval_epoch_01.csv  generated_eval_epoch_02.csv  generated_eval_epoch_03.csv  generated_eval_epoch_04.csv  generated_eval_epoch_05.csv  generated_eval_epoch_06.csv  generated_eval_epoch_07.csv  generated_eval_epoch_08.csv
outputs/scoring/final/: shortlist30_final_candidates.csv  top100_pareto_diverse.csv
outputs/scoring/models/: egfr_pic50_random_forest_metrics.json
outputs/scoring/reports/: scoring_summary.json  scoring_summary.txt
