[project]
name = "egfr-drug-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mrl-pypi>=0.1.5",
    "numpy<2",
    "rdkit>=2025.9.6,<2027",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "pandas",
    "admet-ai"
]